--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <img src="box-photo.jpg" width="50%" alt="a woman holding a box on a grenn screen" >
+    <img src="box-photo.jpg" width="50%" alt="a woman holding a box on a green screen" >
 <h3> Christmas recipes to come!</h3>
 <p></p>
 <ul>
